--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2005-05-17  Chris Toshok  <toshok@ximian.com>
+
+	* frontend/Expression.cs (NumberExpression.DoEvaluateVariable):
+	throw an exception with a reasonable message instead of returning
+	null here (causing a much more cryptic message to be printed.)
+	(StringExpression.DoEvaluateVariable): same.
+	(BoolExpression.DoEvaluateVariable): same.
+	(ConditionalExpression.DoEvaluate,
+	ConditionalExpression.DoEvaluateVariable): reindent.
+
+	* frontend/CSharpTokenizer.cs (Tokenizer.InitTokens): add "True"
+	and "False" to the list of tokens.
+
 2005-05-13  Martin Baulig  <martin@ximian.com>
 
 	* backends/server/i386-arch.c (x86_arch_child_stopped): Don't
