* test/mdb.exp (mdb_start): Find the 'start-mdb.sh' script in $srcdir.
svn path=/trunk/debugger/; revision=45239

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-05-31  Raja R Harinath  <rharinath@novell.com>
 
+	* test/mdb.exp (mdb_start): Find the 'start-mdb.sh' script in
+	$srcdir.
+
 	* configure.in (pkg_config_path): Rename from PKG_PATH, so as to
 	work with newer versions of pkg-config.
 	* frontend/Makefile.am (CSharpExpressionParser.cs): Pick
