--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2005-06-14  Chris Toshok  <toshok@ximian.com>
+
+	* backends/mono/MonoFundamentalObjectBase.cs
+	(MonoFundamentalObjectBase.SetObject): new method, here only as a
+	workaround for bug #75270.
+
+	* interfaces/ITargetFundamentalObject.cs
+	(ITargetFundamentalObject.SetObject): new method.
+
+	* frontend/Expression.cs (StructAccessExpression.SetStaticField,
+	StructAccessExpression.SetField): setters for fields (fundamental
+	types only for now.)
+	(StructAccessExpression.DoAssign): implement for fields.
+	(ArrayAccessExpression.DoAssign): implement for array[int].
+
 2005-06-11  Chris Toshok  <toshok@ximian.com>
 
 	* backends/native/NativeFundamentalObject.cs:
