--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2005-06-22  Chris Toshok  <toshok@ximian.com>
+
+	* backends/native/Makefile.am (EXTRA_DIST): add NativeArrayType.cs
+	/ NativeArrayObject.cs
+
+	* arch/DwarfReader.cs (DwarfReader.DwarfTag): add the rest of the
+	DWARF tags.
+	(DwarfReader.DwarfInline): add this enum.
+	(DwarfReader+LineNumberEngine.GetSource): change the type of the
+	first arg to DieSubprogram.
+	(DwarfReader+Die.CreateDie): add support for array_type and
+	subrange_type.
+	(DwarfReader+DieSubrangeType): new class.
+	(DwarfReader+DieArrayType): new class.
+	(backends/native/NativeArrayType,
+	backends/native/NativeArrayObject): add support for native arrays.
+	
 2005-06-20  Chris Toshok  <toshok@ximian.com>
 
 	* backends/mono/MonoSymbolFile.cs: Add IDisposable interface so we
