--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 	- add dllmap to Mono.Debugger.dll.config
 	Remove dllmap for monodebuggerderver since it will be located by 
 	ldconfig's cache or LD_LIBRARY_PATH
+	* mono-debugger-mini-wrapper: Make finding it relocatable
 
 2005-06-11  Chris Toshok  <toshok@ximian.com>
 
