--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-06  Chris Toshok  <toshok@ximian.com>
+
+	* interfaces/ITargetStructType.cs (ITargetFieldInfo): add
+	HasConstValue property and GetConstValue method to fix the build.
+
 2005-07-05  Chris Toshok  <toshok@ximian.com>
 
 	* backends/mono/MonoMember.cs (MonoFieldInfo): add implementations
@@ -15,9 +20,6 @@
 	(StyleNative.FormatEnumMember): make this code work for both
 	native and managed enum types (although the native backend doesn't
 	provide the needed hooks as yet.)
-
-	* interfaces/ITargetStructType.cs (ITargetFieldInfo): add
-	HasConstValue property and GetConstValue method.
 
 2005-07-05  Chris Toshok  <toshok@ximian.com>
 
