--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2005-07-07  Chris Toshok  <toshok@ximian.com>
 
+	* backends/native/NativeStructType.cs (NativeStructMember.Handle):
+	remove.
+
+	* backends/mono/MonoMember.cs (MonoMember.Handle): remove.
+
+	* interfaces/ITargetStructType.cs (ITargetMemberInfo): Remove the
+	abstraction breaking Handle property.
+
+2005-07-07  Chris Toshok  <toshok@ximian.com>
+
 	* backends/mono/MonoLanguageBackend.cs (TryFindImage): Rename
 	FindImage to this, return true if loading the assembly was
 	successful.
